[gd_scene load_steps=90 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://art/background_long_dirt.png" type="Texture" id=2]
[ext_resource path="res://art/buttons/dead_restart3.png" type="Texture" id=3]
[ext_resource path="res://art/cylinder/cylinder_empty.png" type="Texture" id=4]
[ext_resource path="res://art/cylinder/cylinder3.png" type="Texture" id=5]
[ext_resource path="res://art/cylinder/cylinder4.png" type="Texture" id=6]
[ext_resource path="res://art/cylinder/cylinder5.png" type="Texture" id=7]
[ext_resource path="res://art/cylinder/cylinder2.png" type="Texture" id=8]
[ext_resource path="res://art/cylinder/cylinder1.png" type="Texture" id=9]
[ext_resource path="res://art/cylinder/cylinder6.png" type="Texture" id=10]
[ext_resource path="res://art/cylinder/cylinder1_turn.png" type="Texture" id=11]
[ext_resource path="res://art/cylinder/cylinder5_turn.png" type="Texture" id=12]
[ext_resource path="res://art/cylinder/cylinder2_turn.png" type="Texture" id=13]
[ext_resource path="res://art/cylinder/cylinder4_turn.png" type="Texture" id=14]
[ext_resource path="res://art/cylinder/cylinder3_turn.png" type="Texture" id=15]
[ext_resource path="res://art/tumbleweed.png" type="Texture" id=16]
[ext_resource path="res://art/cactus2.png" type="Texture" id=17]
[ext_resource path="res://art/cactus1.png" type="Texture" id=18]
[ext_resource path="res://art/buttons/dodge.png" type="Texture" id=19]
[ext_resource path="res://art/font/Gazelle.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://art/tumbleweed_shadow2.png" type="Texture" id=21]
[ext_resource path="res://art/buttons/load2.png" type="Texture" id=22]
[ext_resource path="res://art/buttons/shoot3.png" type="Texture" id=23]
[ext_resource path="res://art/cactus_shadow6.png" type="Texture" id=24]
[ext_resource path="res://art/buttons/alive_restart1.png" type="Texture" id=25]
[ext_resource path="res://art/buttons/draw5.png" type="Texture" id=26]
[ext_resource path="res://art/buttons/pause.png" type="Texture" id=27]
[ext_resource path="res://art/buttons/unpause.png" type="Texture" id=28]
[ext_resource path="res://art/white.png" type="Texture" id=29]
[ext_resource path="res://art/victory_message3.png" type="Texture" id=30]
[ext_resource path="res://art/tie_message.png" type="Texture" id=31]
[ext_resource path="res://art/dead_message.png" type="Texture" id=32]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=33]
[ext_resource path="res://art/enemy/enemy_draw_shadow.png" type="Texture" id=34]
[ext_resource path="res://art/enemy/enemy_draw_shadow4.png" type="Texture" id=35]
[ext_resource path="res://art/enemy/enemy_draw_shadow3.png" type="Texture" id=36]
[ext_resource path="res://art/enemy/enemy_draw_shadow2.png" type="Texture" id=37]
[ext_resource path="res://art/enemy/enemy_shoot_shadow2.png" type="Texture" id=38]
[ext_resource path="res://art/enemy/enemy_shoot_shadow3.png" type="Texture" id=39]
[ext_resource path="res://art/enemy/enemy_shoot_shadow4.png" type="Texture" id=40]
[ext_resource path="res://art/enemy/enemy_reload_shadow2.png" type="Texture" id=41]
[ext_resource path="res://art/enemy/enemy_reload_shadow3.png" type="Texture" id=42]
[ext_resource path="res://art/enemy/enemy_reload_shadow4.png" type="Texture" id=43]
[ext_resource path="res://art/enemy/enemy_reload_shadow5.png" type="Texture" id=44]
[ext_resource path="res://art/enemy/enemy_reload_shadow6.png" type="Texture" id=45]
[ext_resource path="res://art/enemy/enemy_dodge_shadow3.png" type="Texture" id=46]
[ext_resource path="res://art/enemy/enemy_dodge_shadow4.png" type="Texture" id=47]
[ext_resource path="res://art/enemy/enemy_dodge_shadow2.png" type="Texture" id=48]
[ext_resource path="res://art/enemy/enemy_die_shadow12.png" type="Texture" id=49]
[ext_resource path="res://art/enemy/enemy_die_shadow13.png" type="Texture" id=50]
[ext_resource path="res://art/enemy/enemy_die_shadow15.png" type="Texture" id=51]
[ext_resource path="res://art/enemy/enemy_die_shadow10.png" type="Texture" id=52]
[ext_resource path="res://art/enemy/enemy_die_shadow16.png" type="Texture" id=53]
[ext_resource path="res://art/enemy/enemy_die_shadow11.png" type="Texture" id=54]
[ext_resource path="res://art/enemy/enemy_die_shadow14.png" type="Texture" id=55]
[ext_resource path="res://art/enemy/enemy_die_shadow17.png" type="Texture" id=56]
[ext_resource path="res://art/enemy/enemy_die_shadow18.png" type="Texture" id=57]
[ext_resource path="res://art/enemy/enemy_die_shadow19.png" type="Texture" id=58]
[ext_resource path="res://art/enemy/enemy_die_shadow9.png" type="Texture" id=59]
[ext_resource path="res://art/enemy/enemy_die_shadow7.png" type="Texture" id=60]
[ext_resource path="res://art/enemy/enemy_die_shadow2.png" type="Texture" id=61]
[ext_resource path="res://art/enemy/enemy_die_shadow6.png" type="Texture" id=62]
[ext_resource path="res://art/enemy/enemy_die_shadow4.png" type="Texture" id=63]
[ext_resource path="res://art/enemy/enemy_die_shadow8.png" type="Texture" id=64]
[ext_resource path="res://art/enemy/enemy_die_shadow3.png" type="Texture" id=65]
[ext_resource path="res://art/enemy/enemy_die_shadow5.png" type="Texture" id=66]
[ext_resource path="res://art/enemy/enemy_die_shadow20.png" type="Texture" id=67]
[ext_resource path="res://art/enemy/enemy_dodge_shadow5.png" type="Texture" id=68]
[ext_resource path="res://art/sound/gunfire_close.wav" type="AudioStream" id=69]
[ext_resource path="res://art/sound/gunfire_far.wav" type="AudioStream" id=70]
[ext_resource path="res://art/sound/dead_sound_slow.wav" type="AudioStream" id=71]
[ext_resource path="res://art/sound/music.wav" type="AudioStream" id=72]
[ext_resource path="res://art/sound/win_sound.wav" type="AudioStream" id=73]
[ext_resource path="res://art/sound/load_sound2.wav" type="AudioStream" id=74]
[ext_resource path="res://art/sound/fall_sound_close4.wav" type="AudioStream" id=75]
[ext_resource path="res://art/sound/fall_sound_far.wav" type="AudioStream" id=76]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 45 ), ExtResource( 45 ), ExtResource( 45 ), ExtResource( 45 ), ExtResource( 45 ), ExtResource( 45 ), ExtResource( 45 ), ExtResource( 45 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 35 ) ],
"loop": false,
"name": "load",
"speed": 25.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 35 ) ],
"loop": false,
"name": "draw",
"speed": 15.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 35 ) ],
"loop": false,
"name": "shoot",
"speed": 20.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 35 ), ExtResource( 35 ), ExtResource( 35 ), ExtResource( 35 ), ExtResource( 35 ), ExtResource( 35 ), ExtResource( 61 ), ExtResource( 65 ), ExtResource( 63 ), ExtResource( 66 ), ExtResource( 62 ), ExtResource( 60 ), ExtResource( 64 ), ExtResource( 59 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 55 ), ExtResource( 51 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 67 ) ],
"loop": false,
"name": "die",
"speed": 35.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 68 ), ExtResource( 47 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 35 ) ],
"loop": false,
"name": "dodge",
"speed": 20.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 20 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": false,
"name": "Five-Six",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 13 ), ExtResource( 5 ) ],
"loop": false,
"name": "Two-Three",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Empty",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 9 ) ],
"loop": false,
"name": "Empty-One",
"speed": 20.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 14 ), ExtResource( 7 ) ],
"loop": false,
"name": "Four-Five",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 15 ), ExtResource( 6 ) ],
"loop": false,
"name": "Three-Four",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": false,
"name": "One-Two",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=5]
size = 33
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=6]
size = 33
font_data = ExtResource( 20 )

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("FadeColor:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("FadeColor:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("FadeColor:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("FadeColor:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("FadeColor:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("FadeColor:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("FadeColor:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("FadeColor:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 32 ), ExtResource( 31 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 96
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=11]
size = 96
font_data = ExtResource( 20 )

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
    float avg = (COLOR.r + COLOR.g + COLOR.b) / 3.5;
    COLOR.rgb = vec3(avg);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 239.528, -141.696 )
texture = ExtResource( 2 )

[node name="Foreground" type="Node2D" parent="Background"]
position = Vector2( -1.52588e-05, 305 )

[node name="Enemy" type="AnimatedSprite" parent="Background/Foreground"]
position = Vector2( 0, 375 )
frames = SubResource( 1 )
animation = "die"

[node name="shadow4" type="Sprite" parent="Background/Foreground"]
position = Vector2( -204.86, 366.945 )
rotation = -2.61799
scale = Vector2( 0.274308, 0.475753 )
texture = ExtResource( 21 )
flip_h = true

[node name="CShadow1" type="Sprite" parent="Background/Foreground"]
position = Vector2( -238.086, 397.115 )
rotation = 0.560472
scale = Vector2( 0.326043, 0.417952 )
texture = ExtResource( 24 )
flip_v = true

[node name="Cactus" type="Sprite" parent="Background/Foreground"]
position = Vector2( -195.455, 273.6 )
scale = Vector2( 0.267066, 0.278954 )
texture = ExtResource( 18 )

[node name="shadow2" type="Sprite" parent="Background/Foreground"]
position = Vector2( 163.324, 397.857 )
rotation = 2.4435
scale = Vector2( 0.28502, 0.623089 )
texture = ExtResource( 21 )
flip_h = true

[node name="Tumbleweed2" type="Sprite" parent="Background/Foreground"]
position = Vector2( 123.614, 339.669 )
rotation = -0.542797
scale = Vector2( 0.288727, 0.329972 )
texture = ExtResource( 16 )

[node name="shadow" type="Sprite" parent="Background/Foreground"]
position = Vector2( 237.23, 601.85 )
rotation = 2.45917
scale = Vector2( 0.608856, 1.15531 )
texture = ExtResource( 21 )
flip_h = true

[node name="CShadow2" type="Sprite" parent="Background/Foreground"]
position = Vector2( 265.428, 627.045 )
rotation = -0.460422
scale = Vector2( 0.725271, 0.762442 )
texture = ExtResource( 24 )
flip_h = true
flip_v = true

[node name="Cactus2" type="Sprite" parent="Background/Foreground"]
position = Vector2( 200.846, 350.471 )
scale = Vector2( 0.678123, 0.777216 )
texture = ExtResource( 17 )

[node name="Tumbleweed" type="Sprite" parent="Background/Foreground"]
position = Vector2( 183.712, 489.896 )
rotation = 0.127409
scale = Vector2( 0.570791, 0.651006 )
texture = ExtResource( 16 )

[node name="shadow3" type="Sprite" parent="Background/Foreground"]
position = Vector2( -263.11, 564.654 )
rotation = -2.54993
scale = Vector2( 0.592903, 0.910649 )
texture = ExtResource( 21 )
flip_h = true

[node name="Tumbleweed3" type="Sprite" parent="Background/Foreground"]
position = Vector2( -216.953, 459.324 )
rotation = 0.127409
scale = Vector2( 0.50795, 0.580013 )
texture = ExtResource( 16 )

[node name="Tumbleweed4" type="Sprite" parent="Background/Foreground"]
position = Vector2( -183.455, 316.223 )
rotation = -0.141372
scale = Vector2( 0.273304, 0.302457 )
texture = ExtResource( 16 )

[node name="EnemyText" type="Label" parent="."]
margin_left = 105.0
margin_top = 293.0
margin_right = 376.0
margin_bottom = 457.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMoveTimer" type="Timer" parent="."]
one_shot = true

[node name="ShowTimer" type="Timer" parent="."]
one_shot = true

[node name="Rumble1" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Rumble2" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DeadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Cylinder" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 60, 680 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "Three-Four"

[node name="Draw" type="TouchScreenButton" parent="."]
position = Vector2( 65.3118, 660.061 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 26 )

[node name="Label" type="Label" parent="Draw"]
margin_left = 114.215
margin_top = 38.5773
margin_right = 370.215
margin_bottom = 118.577
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "DRAW"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 240, 450 )
current = true

[node name="Load" type="TouchScreenButton" parent="Camera2D"]
visible = false
position = Vector2( -240, 290 )
normal = ExtResource( 22 )

[node name="Label" type="Label" parent="Camera2D/Load"]
anchor_top = 0.0016914
anchor_bottom = 0.0016914
margin_left = 40.02
margin_top = 99.7294
margin_right = 125.02
margin_bottom = 130.729
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.945098, 0.945098, 0.945098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Load"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="TouchScreenButton" parent="Camera2D"]
visible = false
position = Vector2( -80, 290 )
normal = ExtResource( 23 )

[node name="Label" type="Label" parent="Camera2D/Fire"]
margin_left = 25.4763
margin_top = 102.336
margin_right = 137.476
margin_bottom = 136.336
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Shoot"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dodge" type="TouchScreenButton" parent="Camera2D"]
visible = false
position = Vector2( 80, 290 )
normal = ExtResource( 19 )

[node name="abel2" type="Label" parent="Camera2D/Dodge"]
margin_left = 24.3858
margin_top = 102.597
margin_right = 136.386
margin_bottom = 136.597
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Dodge"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="TouchScreenButton" parent="Camera2D"]
visible = false
position = Vector2( 175, -395 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 27 )

[node name="Unpause" type="TouchScreenButton" parent="Camera2D"]
pause_mode = 2
visible = false
position = Vector2( 175, -394.333 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 28 )

[node name="FadeAnimation" type="AnimationPlayer" parent="Camera2D"]
anims/FadeToBlack = SubResource( 7 )
anims/FadeToWhite = SubResource( 8 )

[node name="FadeColor" type="ColorRect" parent="Camera2D"]
visible = false
margin_left = -258.079
margin_top = -465.079
margin_right = 260.921
margin_bottom = 466.921
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageArt" type="AnimatedSprite" parent="Camera2D"]
visible = false
position = Vector2( 0, -250 )
frames = SubResource( 9 )
frame = 1

[node name="DeadMessage" type="Label" parent="Camera2D/MessageArt"]
visible = false
margin_left = -220.445
margin_top = -73.9832
margin_right = 220.555
margin_bottom = 22.0168
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "DEAD"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryMessage" type="Label" parent="Camera2D/MessageArt"]
visible = false
margin_left = -220.445
margin_top = -54.4545
margin_right = 220.555
margin_bottom = 41.5455
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Victory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart1" type="TouchScreenButton" parent="Camera2D"]
visible = false
position = Vector2( -128.241, -64.0073 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Camera2D/Restart1"]
margin_left = 83.1604
margin_top = 24.0168
margin_right = 438.16
margin_bottom = 153.017
custom_fonts/font = SubResource( 11 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart2" type="TouchScreenButton" parent="Camera2D"]
visible = false
position = Vector2( -126.78, -61.0226 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 25 )

[node name="Label" type="Label" parent="Camera2D/Restart2"]
margin_left = 79.6396
margin_top = 17.7279
margin_right = 434.64
margin_bottom = 146.728
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrayscaleShader" type="TextureRect" parent="Camera2D"]
visible = false
material = SubResource( 13 )
margin_left = -240.0
margin_top = -450.0
margin_right = 240.0
margin_bottom = 450.0
texture = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 33 )
banner_id = "ca-app-pub-3940256099942544/6300978111"

[node name="GunfireClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 69 )
volume_db = -10.0

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 73 )
volume_db = 10.0

[node name="FallSoundFar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 76 )

[node name="FallSoundClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 75 )
volume_db = -10.0

[node name="LoadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 74 )
volume_db = -10.0

[node name="EnemyLoadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 74 )
volume_db = -30.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 72 )
volume_db = 10.0

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 71 )
volume_db = -10.0

[node name="GunfireFar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 70 )
volume_db = -1.0

[node name="GunfireTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="timeout" from="PlayerMoveTimer" to="." method="_on_PlayerMoveTimer_timeout"]
[connection signal="timeout" from="ShowTimer" to="." method="_on_ShowTimer_timeout"]
[connection signal="timeout" from="Rumble1" to="." method="_on_Rumble1_timeout"]
[connection signal="timeout" from="Rumble2" to="." method="_on_Rumble2_timeout"]
[connection signal="released" from="Draw" to="." method="_on_Draw_released"]
[connection signal="released" from="Camera2D/Load" to="." method="_on_Load_released"]
[connection signal="released" from="Camera2D/Fire" to="." method="_on_Fire_released"]
[connection signal="released" from="Camera2D/Dodge" to="." method="_on_Dodge_released"]
[connection signal="released" from="Camera2D/Pause" to="." method="_on_Pause_released"]
[connection signal="released" from="Camera2D/Unpause" to="." method="_on_Unpause_released"]
[connection signal="released" from="Camera2D/Restart1" to="." method="_on_Restart_released"]
[connection signal="released" from="Camera2D/Restart2" to="." method="_on_Restart_released"]
[connection signal="timeout" from="GunfireTimer" to="." method="_on_GunfireTimer_timeout"]
